# Compilers-UsingCMAKEBuildSystem-ToBuildOPENCV

Ass_4/Req/: Assignment_4.txt
Ass_4/Sol/CMakeProject1/: CMakeLists.txt  CMakeSettings.json  main.cpp
Ass_4/Sol/CMakeProject1/CMakeProject1/: CMakeLists.txt
